src/objects/OrderLine__c.object
<CustomObject>
    <description>Line items in an order</description>
    <fields>
        <fullName>BillingFrequency__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>A link to billing frequency</description>
        <inlineHelpText>Select billing frequency</inlineHelpText>
        <label>Billing Frequency</label>
        <referenceTo>BillingFrequency__c</referenceTo>
        <relationshipLabel>Order Line Billing Frequency</relationshipLabel>
        <relationshipName>OrderLinesBillingFrequency</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentNet__c</fullName>
        <description>Current net amount</description>
        <inlineHelpText>Enter net amount</inlineHelpText>
        <label>Current Net</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <description>Discount amount</description>
        <inlineHelpText>Enter discount amount</inlineHelpText>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FunctionalCurrency__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Function currency</description>
        <inlineHelpText>Select functional currency</inlineHelpText>
        <label>Functional Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Order Lines Functional Currency</relationshipLabel>
        <relationshipName>OrderLinesFunctionalCurrency</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JobsQty__c</fullName>
        <description>Number of jobs</description>
        <inlineHelpText>Enter number of jobs</inlineHelpText>
        <label>Jobs Qty</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LineNum__c</fullName>
        <description>Order line number</description>
        <inlineHelpText>Auto generated line number</inlineHelpText>
        <label>Line Num</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <description>Country where the order is sold</description>
        <inlineHelpText>Select market</inlineHelpText>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Russia</fullName>
                </value>
                <value>
                    <fullName>Scotland</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Ukraine</fullName>
                </value>
                <value>
                    <fullName>United Arabic Emirates</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>United States</fullName>
                    <default>true</default>
                    <label>United States</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Parent order object</description>
        <inlineHelpText>Select a parent record</inlineHelpText>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Order Lines</relationshipLabel>
        <relationshipName>Order_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ReportingCurrency__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Reporting currency</description>
        <inlineHelpText>Select reporting currency</inlineHelpText>
        <label>Reporting Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Order Lines Reporting Currency</relationshipLabel>
        <relationshipName>OrderLinesReportingCurrency</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ServiceEndDate__c</fullName>
        <defaultValue>Today() + 30</defaultValue>
        <description>Service end date</description>
        <inlineHelpText>Enter service end date</inlineHelpText>
        <label>Service End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ServiceStart__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Service start date</description>
        <inlineHelpText>Enter service start date</inlineHelpText>
        <label>Service Start</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ThirtyDayUpg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Thirty day upgrade</description>
        <inlineHelpText>Indicate whether it is a thirty day upgrade</inlineHelpText>
        <label>Thirty Day Upgrade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UsersQty__c</fullName>
        <description>Number of users</description>
        <inlineHelpText>Enter number of users</inlineHelpText>
        <label>Users Qty</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WebsiteName__c</fullName>
        <description>Website name</description>
        <inlineHelpText>Select website name</inlineHelpText>
        <label>Website Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AllHealthcareJobs</fullName>
                </value>
                <value>
                    <fullName>ClearanceJobs</fullName>
                </value>
                <value>
                    <fullName>Dice</fullName>
                </value>
                <value>
                    <fullName>eFCROW</fullName>
                </value>
                <value>
                    <fullName>eFinancialCareers</fullName>
                </value>
                <value>
                    <fullName>JobsInTheMoney</fullName>
                </value>
                <value>
                    <fullName>Learning</fullName>
                </value>
                <value>
                    <fullName>Rigzone-DS</fullName>
                </value>
                <value>
                    <fullName>Rigzone-GE</fullName>
                </value>
                <value>
                    <fullName>Rigzone-OG</fullName>
                </value>
                <value>
                    <fullName>Rigzone-RL</fullName>
                </value>
                <value>
                    <fullName>Rigzone-RO</fullName>
                </value>
                <value>
                    <fullName>Rigzone-RZ</fullName>
                </value>
                <value>
                    <fullName>Rigzone-SQ</fullName>
                </value>
                <value>
                    <fullName>TargetedJobFairs</fullName>
                </value>
                <value>
                    <fullName>WorldwideWorker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WebstoreUpg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Webstore upgrade</description>
        <inlineHelpText>Indicate whether it is a webstore upgrade</inlineHelpText>
        <label>Webstore Upgrade</label>
        <type>Checkbox</type>
    </fields>
    <label>Order Line</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OLN-{00000000}</displayFormat>
        <label>Order Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>